--- a/assets/components/keyboard/_keyboard.scss
+++ b/assets/components/keyboard/_keyboard.scss
@@ -1,21 +1,24 @@
+
 .keyboard {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  // justify-content: space-between;
+  // align-items: center;
   max-width: 820px;
   margin: 0 auto;
   padding: 0;
   list-style: none;
-  box-shadow: none !important;
+
+  &--row {
+    display: flex;
+    justify-content: space-between;
+  }
 
   &--item{
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    min-width: 40px;
-    min-height: 40px;
+    min-width: 5vmin;
+    min-height: 5vmin;
     margin-top: 5px;
     padding: 5px;
     color: #ffffff;
@@ -24,35 +27,49 @@
     text-align: center;
     user-select: none;
 
-    &:nth-child(14) {
-      width: 100px;
+    @media screen and (max-width: 780px) {
+      min-width: 4.5vmin;
+      min-height: 4.5vmin;
     }
 
-    &:nth-child(15),
-    &:nth-child(28) {
-      width: 60px;
+    @media screen and (max-width: 650px) {
+      min-width: 4vmin;
+      min-height: 4vmin;
     }
 
-    &:nth-child(29),
-    &:nth-child(41) {
-      width: 100px;
+    @media screen and (max-width: 500px) {
+      min-width: 3.5vmin;
+      min-height: 3.5vmin;
     }
 
-    &:nth-child(42) {
-      width: 140px;
+    @media screen and (max-width: 500px) {
+      min-width: 3vmin;
+      min-height: 3vmin;
+      & [data-keycode="Backspace"] {
+        content: '&#8592;';
+      }
     }
 
-    &:nth-child(53),
-    &:nth-child(61) {
-      transform: rotate(90deg);
+    .keyboard--row:first-child &:last-child {
+      width: 13vmin;
     }
 
-    &:nth-child(55) {
-      width: 100px;
+    .keyboard--row:nth-child(2) &:first-child,
+    .keyboard--row:nth-child(2) &:last-child {
+      width: 9vmin;
     }
 
-    &:nth-child(57) {
-      width: 350px;
+    .keyboard--row:nth-child(3) &:first-child,
+    .keyboard--row:nth-child(3) &:last-child {
+      width: 12vmin;
+    }
+
+    .keyboard--row:nth-child(4) &:first-child {
+      width: 15vmin;
+    }
+
+    .keyboard--row:last-child &:nth-child(3) {
+      width: 50vmin;
     }
   }
 }
