--- a/style.css
+++ b/style.css
@@ -1,21 +1,20 @@
 .keyboard {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
   max-width: 820px;
   margin: 0 auto;
   padding: 0;
   list-style: none;
-  box-shadow: none !important;
+}
+.keyboard--row {
+  display: flex;
+  justify-content: space-between;
 }
 .keyboard--item {
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  min-width: 40px;
-  min-height: 40px;
+  min-width: 5vmin;
+  min-height: 5vmin;
   margin-top: 5px;
   padding: 5px;
   color: #ffffff;
@@ -24,26 +23,47 @@
   text-align: center;
   user-select: none;
 }
-.keyboard--item:nth-child(14) {
-  width: 100px;
+@media screen and (max-width: 780px) {
+  .keyboard--item {
+    min-width: 4.5vmin;
+    min-height: 4.5vmin;
+  }
 }
-.keyboard--item:nth-child(15), .keyboard--item:nth-child(28) {
-  width: 60px;
+@media screen and (max-width: 650px) {
+  .keyboard--item {
+    min-width: 4vmin;
+    min-height: 4vmin;
+  }
 }
-.keyboard--item:nth-child(29), .keyboard--item:nth-child(41) {
-  width: 100px;
+@media screen and (max-width: 500px) {
+  .keyboard--item {
+    min-width: 3.5vmin;
+    min-height: 3.5vmin;
+  }
 }
-.keyboard--item:nth-child(42) {
-  width: 140px;
+@media screen and (max-width: 500px) {
+  .keyboard--item {
+    min-width: 3vmin;
+    min-height: 3vmin;
+  }
+  .keyboard--item [data-keycode=Backspace] {
+    content: "&#8592;";
+  }
 }
-.keyboard--item:nth-child(53), .keyboard--item:nth-child(61) {
-  transform: rotate(90deg);
+.keyboard--row:first-child .keyboard--item:last-child {
+  width: 13vmin;
 }
-.keyboard--item:nth-child(55) {
-  width: 100px;
+.keyboard--row:nth-child(2) .keyboard--item:first-child, .keyboard--row:nth-child(2) .keyboard--item:last-child {
+  width: 9vmin;
 }
-.keyboard--item:nth-child(57) {
-  width: 350px;
+.keyboard--row:nth-child(3) .keyboard--item:first-child, .keyboard--row:nth-child(3) .keyboard--item:last-child {
+  width: 12vmin;
+}
+.keyboard--row:nth-child(4) .keyboard--item:first-child {
+  width: 15vmin;
+}
+.keyboard--row:last-child .keyboard--item:nth-child(3) {
+  width: 50vmin;
 }
 
 .active {
