--- a/assets/components/keyboard/_keyboard.scss
+++ b/assets/components/keyboard/_keyboard.scss
@@ -1,7 +1,4 @@
-
 .keyboard {
-  // justify-content: space-between;
-  // align-items: center;
   max-width: 820px;
   margin: 0 auto;
   padding: 0;
@@ -35,6 +32,7 @@
     @media screen and (max-width: 650px) {
       min-width: 4vmin;
       min-height: 4vmin;
+      font-size: 0.8rem;
     }
 
     @media screen and (max-width: 500px) {
@@ -42,34 +40,106 @@
       min-height: 3.5vmin;
     }
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 400px) {
       min-width: 3vmin;
       min-height: 3vmin;
-      & [data-keycode="Backspace"] {
-        content: '&#8592;';
-      }
     }
 
     .keyboard--row:first-child &:last-child {
-      width: 13vmin;
+      width: 15vmin;
+      @media screen and (max-width: 400px) {
+        max-width: 10vmin;
+        font-size: 0.5rem;
+        &::before {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          z-index: 5;
+          display: inherit;
+          justify-content: inherit;
+          align-items: inherit;
+          font-size: 0.8rem;
+          background: inherit;
+          border-radius: inherit;
+          content: "←";
+        }
+      }
     }
 
     .keyboard--row:nth-child(2) &:first-child,
     .keyboard--row:nth-child(2) &:last-child {
-      width: 9vmin;
+      width: 10vmin;
     }
 
-    .keyboard--row:nth-child(3) &:first-child,
+    .keyboard--row:nth-child(3) &:first-child {
+      width: 15vmin;
+      @media screen and (max-width: 400px) {
+        font-size: 0.1rem;
+        &::before {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          z-index: 5;
+          display: inherit;
+          justify-content: inherit;
+          align-items: inherit;
+          font-size: 0.8rem;
+          background: inherit;
+          border-radius: inherit;
+          content: "Caps";
+        }
+      }
+    }
+
     .keyboard--row:nth-child(3) &:last-child {
-      width: 12vmin;
+      width: 10vmin;
     }
 
     .keyboard--row:nth-child(4) &:first-child {
       width: 15vmin;
+      @media screen and (max-width: 650px) {
+        width: 20vmin;
+      }
+    }
+
+    .keyboard--row:nth-child(4) &:last-child {
+      @media screen and (max-width: 650px) {
+        font-size: 0.5rem;
+        &::before {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          z-index: 5;
+          display: inherit;
+          justify-content: inherit;
+          align-items: inherit;
+          font-size: 0.8rem;
+          background: inherit;
+          border-radius: inherit;
+          content: "Sh";
+        }
+      }
     }
 
     .keyboard--row:last-child &:nth-child(3) {
-      width: 50vmin;
+      width: 52vmin;
+      @media screen and (max-width: 650px) {
+        width: 50vmin;
+      }
+
+      @media screen and (max-width: 450px) {
+        width: 45vmin;
+      }
+
+      @media screen and (max-width: 400px) {
+        width: 40vmin;
+      }
     }
   }
 }
